--- a/app/src/main/res/layout/activity_outlet_details.xml
+++ b/app/src/main/res/layout/activity_outlet_details.xml
@@ -300,9 +300,9 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:paddingTop="5dp"
+                            android:paddingLeft="10dp"
                             android:orientation="horizontal"
-                            android:layout_margin="2dp"
-                            android:padding="10dp"
                             >
 
                             <androidx.appcompat.widget.AppCompatButton
@@ -322,12 +322,32 @@
                                 app:layout_constraintStart_toStartOf="@id/btnEditOutletDetails"/>
 
                         </LinearLayout>
-
-                        <Button
-                            android:id="@+id/buttonPlaceOrder"
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Place Order"/>
+                            android:orientation="horizontal"
+                            android:paddingTop="5dp"
+                            android:paddingLeft="10dp"
+                            >
+
+                            <androidx.appcompat.widget.AppCompatButton
+                                android:id="@+id/buttonPlaceOrder"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Place Order"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"/>
+
+                            <androidx.appcompat.widget.AppCompatButton
+                                android:id="@+id/btnBlockedBrand"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Blocked Brand"
+                                app:layout_constraintTop_toBottomOf="@id/buttonPlaceOrder"
+                                app:layout_constraintStart_toStartOf="@id/buttonPlaceOrder"/>
+
+                        </LinearLayout>
+
                     </LinearLayout>
 
 
