--- a/app/src/main/res/layout/activity_add_block_brand.xml
+++ b/app/src/main/res/layout/activity_add_block_brand.xml
@@ -22,7 +22,7 @@
             android:inputType="text"
             android:layout_marginTop="20dp"
             android:padding="20dp"
-            android:hint="Krishna Shop"
+            android:hint="Outlet Name"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textAlignment="center"
@@ -39,7 +39,7 @@
             android:layout_marginLeft="15sp"
             android:textColor="@color/white"
             android:textSize="20dp"
-            android:text="Select Product Bran"
+            android:text="Select Product Brand"
             />
         <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/selectBrand"
