--- a/app/src/main/res/layout/activity_outlet_details.xml
+++ b/app/src/main/res/layout/activity_outlet_details.xml
@@ -347,6 +347,23 @@
                                 app:layout_constraintStart_toStartOf="@id/buttonPlaceOrder"/>
 
                         </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:paddingTop="5dp"
+                            android:paddingLeft="10dp"
+                            >
+
+                            <androidx.appcompat.widget.AppCompatButton
+                                android:id="@+id/buttonPastOrder"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Outlet Past Order"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"/>
+
+                        </LinearLayout>
 
                     </LinearLayout>
 
