--- a/app/src/main/res/layout/pattern_ordered_product_list.xml
+++ b/app/src/main/res/layout/pattern_ordered_product_list.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.cardview.widget.CardView
+    android:id="@+id/lyt_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <com.balysv.materialripple.MaterialRippleLayout
-        android:id="@+id/lyt_parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:mrl_rippleAlpha="0.2"
-        app:mrl_rippleColor="@color/ripple_color"
-        app:mrl_rippleHover="true"
-        app:mrl_rippleOverlay="true">
+    android:layout_height="wrap_content"
+    android:background="@color/red"
+    android:layout_margin="3dp"
+    card_view:cardElevation="4dp"
+    card_view:cardCornerRadius="2dp"
+    android:layout_marginBottom="5dp"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardPreventCornerOverlap="false" >
 
         <LinearLayout
             android:id="@+id/LL_Main"
@@ -57,6 +57,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="3dp"
                         android:text="Product Name"
+                        android:textStyle="bold"
                         android:textSize="16sp" />
 
                     <RelativeLayout
@@ -75,6 +76,7 @@
                                 android:id="@+id/product_quantity"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textStyle="bold"
                                 android:text="5" />
 
                         </LinearLayout>
@@ -86,7 +88,8 @@
                             android:layout_alignParentRight="true"
                             android:layout_alignParentEnd="true"
                             android:text="10 USD"
-                            android:textColor="@color/txt_price_color" />
+                            android:textStyle="bold"
+                            android:textColor="@color/button_blue" />
 
                     </RelativeLayout>
 
@@ -95,7 +98,4 @@
             </LinearLayout>
 
         </LinearLayout>
-
-    </com.balysv.materialripple.MaterialRippleLayout>
-
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
