--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -173,6 +173,68 @@
                 app:layout_constraintTop_toBottomOf="@+id/editTextMinQty" />
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/select_brand_own_type"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15sp"
+                android:layout_marginTop="10sp"
+                android:text="Select Brand Owner Type"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
+                />
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/selectBrandOwnType"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15sp"
+                android:layout_marginRight="15sp"
+                android:layout_marginTop="5dp"
+                android:autofillHints="Outlet"
+                android:background="@drawable/rounded_corners_edittext_dark"
+                android:gravity="center"
+                android:padding="6dp"
+                android:textColor="@color/textColorSecondary"
+                android:textColorHint="@color/textColorPrimaryDark"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/select_brand_own_type" />
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/select_brand_own"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15sp"
+                android:layout_marginTop="10sp"
+                android:text="Select Brand Owner"
+                android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/selectBrandOwnType"
+                />
+
+            <androidx.appcompat.widget.AppCompatSpinner
+                android:id="@+id/selectBrandOwn"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="15sp"
+                android:layout_marginRight="15sp"
+                android:layout_marginTop="5dp"
+                android:autofillHints="Outlet"
+                android:background="@drawable/rounded_corners_edittext_dark"
+                android:gravity="center"
+                android:padding="6dp"
+                android:textColor="@color/textColorSecondary"
+                android:textColorHint="@color/textColorPrimaryDark"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/select_brand_own" />
+
+
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/textViewURL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -188,7 +250,7 @@
                 android:textSize="20dp"
                 android:layout_margin="5dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
+                app:layout_constraintTop_toBottomOf="@+id/selectBrandOwn"
                 tools:ignore="RtlCompat" />
 
             <androidx.appcompat.widget.AppCompatImageView
