--- a/app/src/main/res/layout/pattern_blocked_brand_list.xml
+++ b/app/src/main/res/layout/pattern_blocked_brand_list.xml
@@ -51,7 +51,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/product_name"
+                android:id="@+id/textViewBrandName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="3dp"
