--- a/app/src/main/res/layout/activity_past_ordered_products.xml
+++ b/app/src/main/res/layout/activity_past_ordered_products.xml
@@ -58,13 +58,54 @@
         app:layout_constraintTop_toBottomOf="@id/searchProductBrand"
         app:layout_constraintVertical_bias="0.019" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textViewOrderStatusLable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15sp"
+        android:text="Update Order Status"
+        android:textColor="@color/black"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
+
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/spinnerOrderStatus"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="40dp"
+        android:layout_marginLeft="15sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15sp"
+        android:autofillHints="Outlet"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:gravity="center"
+        android:padding="6dp"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewOrderStatusLable" />
+
+    <Button
+        android:id="@+id/buttonUpdateOrderStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:visibility="gone"
+        android:text="Update Order status"
+        app:layout_constraintTop_toBottomOf="@id/spinnerOrderStatus"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
     <include
         android:id="@+id/layoutOrderBasicDetails"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
         layout="@layout/pattern_past_order_list"
-        app:layout_constraintTop_toBottomOf="@id/view"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/buttonUpdateOrderStatus" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPastOrderdProductList"
         android:layout_width="0dp"
