--- a/app/src/main/res/drawable/buttons.xml
+++ b/app/src/main/res/drawable/buttons.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/colorPrimaryDark"
+        android:color="@color/socialColorFacebook"
         >
     </solid>
     <corners
-        android:radius="8dp"
+        android:radius="10dp"
         >
 
     </corners>
