--- a/app/src/main/res/layout/pattern_outlet_list.xml
+++ b/app/src/main/res/layout/pattern_outlet_list.xml
@@ -8,11 +8,26 @@
     android:layout_margin="4dp"
     android:paddingBottom="10dp">
 
+    <androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/red"
+        android:layout_margin="3dp"
+        card_view:cardElevation="3dp"
+        card_view:cardCornerRadius="2dp"
+        android:layout_marginBottom="5dp"
+        card_view:cardUseCompatPadding="true"
+        card_view:cardPreventCornerOverlap="false"
+        tools:ignore="MissingConstraints">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
+        android:padding="2dp"
         tools:ignore="MissingConstraints">
 
 
@@ -29,6 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Business Name"
+                android:textColor="@color/button_blue"
                 android:textSize="17dp"
                 android:textStyle="bold" />
 
@@ -94,6 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:text="Name"
+                android:textColor="@color/button_blue"
                 android:textStyle="bold"
                 android:textSize="16dp" />
             <androidx.appcompat.widget.AppCompatTextView
@@ -102,6 +119,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:text="1234567899"
+                android:textColor="@color/button_blue"
                 android:textStyle="bold"
                 android:textSize="16dp" />
 
@@ -110,10 +128,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
+                android:textColor="@color/button_blue"
                 android:text="JNKF136784"
                 android:textSize="16dp" />
 
         </LinearLayout>
     </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
