--- a/app/src/main/res/layout/pattern_past_order_list.xml
+++ b/app/src/main/res/layout/pattern_past_order_list.xml
@@ -158,7 +158,7 @@
 
                 <TextView
                     android:id="@+id/textViewOrderFor"
-                    android:layout_width="wrap_content"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:gravity="end"
@@ -187,7 +187,7 @@
 
                 <TextView
                     android:id="@+id/textViewOrderBy"
-                    android:layout_width="wrap_content"
+                    android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:maxLines="2"
                     android:text="Order By"
