--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -86,7 +86,7 @@
                         <ImageView
                             android:layout_width="100dp"
                             android:layout_height="100dp"
-                            android:src="@drawable/profile"
+                            android:src="@drawable/shop"
                             android:layout_gravity="center_horizontal|center_vertical"
 
                             />
@@ -123,7 +123,7 @@
                         <ImageView
                             android:layout_width="100dp"
                             android:layout_height="100dp"
-                            android:src="@drawable/profile"
+                            android:src="@drawable/carticon"
                             android:layout_gravity="center_horizontal|center_vertical"
 
                             />
@@ -159,7 +159,7 @@
                         <ImageView
                             android:layout_width="100dp"
                             android:layout_height="100dp"
-                            android:src="@drawable/profile"
+                            android:src="@drawable/productlist"
                             android:layout_gravity="center_horizontal|center_vertical"
 
                             />
@@ -195,7 +195,7 @@
                         <ImageView
                             android:layout_width="100dp"
                             android:layout_height="100dp"
-                            android:src="@drawable/profile"
+                            android:src="@drawable/logout"
                             android:layout_gravity="center_horizontal|center_vertical"
 
                             />
@@ -233,7 +233,7 @@
                         <ImageView
                             android:layout_width="100dp"
                             android:layout_height="100dp"
-                            android:src="@drawable/profile"
+                            android:src="@drawable/outlet"
                             android:layout_gravity="center_horizontal|center_vertical"
 
                             />
@@ -270,7 +270,7 @@
                         <ImageView
                             android:layout_width="100dp"
                             android:layout_height="100dp"
-                            android:src="@drawable/profile"
+                            android:src="@drawable/clerk"
                             android:layout_gravity="center_horizontal|center_vertical"
 
                             />
@@ -306,7 +306,7 @@
                         <ImageView
                             android:layout_width="100dp"
                             android:layout_height="100dp"
-                            android:src="@drawable/profile"
+                            android:src="@drawable/comment"
                             android:layout_gravity="center_horizontal|center_vertical"
                             />
 
