--- a/app/src/main/res/layout/activity_add_outlet.xml
+++ b/app/src/main/res/layout/activity_add_outlet.xml
@@ -74,6 +74,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/select_outlet_text_view" />
 
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/selectBrand"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_margin="15sp"
+            android:autofillHints="Outlet"
+            android:background="@drawable/rounded_corners_edittext_dark"
+            android:gravity="center"
+            android:visibility="gone"
+            android:padding="6dp"
+            android:textColor="@color/textColorSecondary"
+            android:textColorHint="@color/textColorPrimaryDark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/selectOutlet" />
+
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/editTextOutletName"
             android:layout_width="match_parent"
@@ -90,7 +106,7 @@
             android:textColorHint="@color/textColorPrimaryDark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/selectOutlet" />
+            app:layout_constraintTop_toBottomOf="@+id/selectBrand" />
 
 
         <androidx.appcompat.widget.AppCompatEditText
