--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -285,8 +285,47 @@
                             />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
+
+
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/feedback"
+                    android:id="@+id/cardViewAddBrandOwner"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_margin="10dp"
+                    app:cardElevation="7dp"
+                    android:visibility="gone"
+                    app:cardCornerRadius="10dp"
+                    >
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:layout_margin="2dp"
+                        android:padding="10dp"
+                        >
+
+                        <ImageView
+                            android:layout_width="100dp"
+                            android:layout_height="100dp"
+                            android:src="@drawable/profile"
+                            android:layout_gravity="center_horizontal|center_vertical"
+
+                            />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Add Brand Owner"
+                            android:textSize="15sp"
+                            android:layout_gravity="center_horizontal"
+                            android:textStyle="bold"
+                            />
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardViewOrderWiseProductQty"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_margin="10dp"
@@ -308,13 +347,14 @@
                             android:layout_height="100dp"
                             android:src="@drawable/comment"
                             android:layout_gravity="center_horizontal|center_vertical"
+
                             />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Feedback/Bugs"
-                            android:textSize="15sp"
+                            android:text="Order wise Product Qty"
+                            android:textSize="12sp"
                             android:layout_gravity="center_horizontal"
                             android:textStyle="bold"
                             />
