--- a/app/src/main/res/layout/pattern_product_list_01.xml
+++ b/app/src/main/res/layout/pattern_product_list_01.xml
@@ -40,12 +40,26 @@
                     android:layout_margin="5dp"
                     android:paddingLeft="4dp">
 
-                    <TextView
-                        android:id="@+id/TextViewCategoryBrandName"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Punjabi"
-                        android:textSize="15dp"/>
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/TextViewCategoryBrandName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Punjabi"
+                            android:layout_weight="1"
+                            android:textSize="15dp"/>
+                        <TextView
+                            android:id="@+id/TextViewProductCode"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Punjabi"
+                            android:layout_weight="1"
+                            android:textSize="15dp"/>
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/TextViewProductName"
@@ -61,9 +75,15 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/TextViewDiscountedPrice"
+                            android:layout_width="wrap_content"
+                            android:layout_height="30dp"
+                            android:text="50 Rs."/>
+                        <TextView
                             android:id="@+id/TextViewProductPrice"
                             android:layout_width="match_parent"
                             android:layout_height="30dp"
+                            android:layout_marginStart="4dp"
                             android:text="50 Rs."
                             android:layout_weight="1"/>
 
@@ -117,4 +137,25 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:id="@+id/ManageProduct"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonDeleteProduct"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Delete Product"
+            android:layout_weight="1"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonManageStock"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Mannage Stock"
+            android:layout_weight="1"/>
+    </LinearLayout>
 </LinearLayout>
