add change on text

--- a/app/src/main/res/layout/activity_product_brand.xml
+++ b/app/src/main/res/layout/activity_product_brand.xml
@@ -15,8 +15,11 @@
         android:gravity="start|center_vertical"
         android:hint="Category Product"
         android:inputType="text|textNoSuggestions"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:padding="4dp"
+        android:lines="2"
+        android:minLines="2"
+        android:singleLine="false"
         android:textAlignment="viewStart"
         android:textColor="#000"
         android:textColorHint="#000"
