--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -28,23 +28,24 @@
                 android:hint="Namkin"
                 android:inputType="text"
                 android:padding="10dp"
+                android:layout_marginTop="5dp"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.249"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="MissingConstraints,RtlCompat"
-                tools:layout_editor_absoluteY="-2dp" />
+                tools:layout_editor_absoluteY="2dp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/textViewCategoryBrand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_marginStart="196dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/indicator_corner_bg"
                 android:hint="Balaji"
                 android:inputType="text"
                 android:padding="10dp"
@@ -53,11 +54,10 @@
                 android:textColorHint="@color/white"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:background="@drawable/indicator_corner_bg"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textViewCategory"
-                tools:ignore="MissingConstraints,RtlCompat"
-                tools:layout_editor_absoluteY="-3dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewCategory"
+                tools:ignore="MissingConstraints,RtlCompat" />
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/editTextProductName"
