--- a/app/src/main/res/layout/activity_add_product_brand.xml
+++ b/app/src/main/res/layout/activity_add_product_brand.xml
@@ -41,6 +41,8 @@
             android:src="@drawable/ic_add_image"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:layout_marginBottom="30dp"
             />
 
