--- a/app/src/main/res/layout/activity_manage__product__stock_.xml
+++ b/app/src/main/res/layout/activity_manage__product__stock_.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/app_logo"
+        android:src="@drawable/basic_need"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
