--- a/app/src/main/res/layout/activity_outlet_details.xml
+++ b/app/src/main/res/layout/activity_outlet_details.xml
@@ -27,7 +27,7 @@
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_margin="15dp"
-                    android:src="@drawable/app_logo"
+                    android:src="@drawable/basic_need"
                     />
 
 
