--- a/app/src/main/res/layout/pattern_product_list_01.xml
+++ b/app/src/main/res/layout/pattern_product_list_01.xml
@@ -54,10 +54,9 @@
                             android:textSize="15dp"/>
                         <TextView
                             android:id="@+id/TextViewProductCode"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Punjabi"
-                            android:layout_weight="1"
                             android:textSize="15dp"/>
                     </LinearLayout>
 
@@ -66,6 +65,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Panir Tikka Masala"
+                        android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         android:textSize="20dp"/>
 
@@ -93,7 +93,7 @@
                             android:layout_height="match_parent"
                             android:layout_gravity="center_horizontal"
                             android:layout_marginRight="15dp"
-                            android:background="@color/white"
+                            android:background="@color/colorPrimary"
                             android:orientation="horizontal">
 
                             <TextView
@@ -103,7 +103,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:text=""
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:textStyle="bold"/>
 
                             <TextView
@@ -113,7 +113,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:text="Add"
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:textStyle="bold"/>
 
                             <TextView
@@ -123,7 +123,7 @@
                                 android:layout_weight="1"
                                 android:gravity="center"
                                 android:text=""
-                                android:textColor="@color/black"
+                                android:textColor="@color/white"
                                 android:textStyle="bold"/>
                         </LinearLayout>
 
