--- a/app/src/main/res/layout/pattern_product_category.xml
+++ b/app/src/main/res/layout/pattern_product_category.xml
@@ -14,8 +14,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/ic_add_image"
-        android:layout_margin="10dp"
-        android:scaleType="fitXY" />
+        android:layout_margin="10dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
